
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int atoi (unsigned char*) ;
 int exit (int) ;
 int fputs (char*,int ) ;
 int stdout ;
 unsigned char* strstr (unsigned char*,char*) ;

int getproto(unsigned char *buff) {
    int p;
    unsigned char *ptr;

    ptr = strstr(buff + 23, "protocol");
    if(ptr) {
        p = atoi(ptr + 9);
    } else {
        fputs("\nError: No protocol informations in the answer of the server\n", stdout);
        exit(1);
    }

    return(p);
}
